bookinfo-https-gw/route-https.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    maistra.io/gateway-name: bookinfo-gateway
    maistra.io/gateway-namespace: bookinfo 
  labels:
    app: productpage
    service: productpage
  name: secure-productpage
  namespace: bookinfo
spec:
  host: secure-productpage.apps.cluster-99549.dynamic.redhatworkshops.io
  port:
    targetPort: https
  tls:
    termination: passthrough
  to:
    kind: Service
    name: ingressgateway
    weight: 100
  wildcardPolicy: None
